# flightAPI/src/controllers/reservation.js
@@ -1,13 +1,12 @@
-"use strict"
+"use strict";
 
 // Reservation Controller:
-
-const Reservation = require('../models/reservation')
+const Passenger = require("../models/passenger");
+const Reservation = require("../models/reservation");
 
 module.exports = {
-
-    list: async (req, res) => {
-        /*
+	list: async (req, res) => {
+		/*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "List Reservations"
             #swagger.description = `
@@ -20,86 +19,125 @@ module.exports = {
             `
         */
 
-        const data = await res.getModelList(Reservation)
+		const data = await res.getModelList(Reservation,{},'passengers');
 
-        res.status(200).send({
-            error: false,
-            details: await res.getModelListDetails(Reservation),
-            data
-        })
-    },
+		res.status(200).send({
+			error: false,
+			details: await res.getModelListDetails(Reservation),
+			data,
+		});
+	},
 
-    create: async (req, res) => {
-        /*
+	create: async (req, res) => {
+		/*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Create Reservation"
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-                schema: {
-                   
+                 schema: {
+                    "flightId": "...Flight.objectId...",
+                    "passengers": [
+                        "...Passenger.objectId...",
+                        {
+                            "firstName": "string",
+                            "lastName": "string",
+                            "email": "string:email",
+                        }
+                    ]
                 }
             }
         */
 
-        const data = await Reservation.create(req.body)
+		let passengerInfos = req.body?.passengers || [],
+			passengerIds = [],
+			passenger = false;
 
-        res.status(201).send({
-            error: false,
-            data
-        })
-    },
+		for (let passengerInfo of passengerInfos) {
+            Object.assign(passengerInfo, { createdId: req.user?._id });
+			if (typeof passengerInfo == "object") {
+				passenger = await Passenger.findOne({ email: passengerInfo.email });
 
-    read: async (req, res) => {
-        /*
+				if(!passenger) passenger=await Passenger.create(passengerInfo)
+			} else {
+				passenger = await Passenger.findOne({ _id: passengerInfo });
+				
+			}
+            if(passenger) passengerIds.push(passenger._id);
+		}
+		req.body.passengers = passengerIds;
+
+        
+		const data = await Reservation.create(req.body);
+
+		res.status(201).send({
+			error: false,
+			data,
+		});
+	},
+
+	read: async (req, res) => {
+		/*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Get Single Reservation"
         */
 
-        const data = await Reservation.findOne({ _id: req.params.id })
+		const data = await Reservation.findOne({ _id: req.params.id });
 
-        res.status(200).send({
-            error: false,
-            data
-        })
+		res.status(200).send({
+			error: false,
+			data,
+		});
+	},
 
-    },
-
-    update: async (req, res) => {
-        /*
+	update: async (req, res) => {
+		/*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Update Reservation"
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-                schema: {
+                schema: {$ref: '#/definitions/Reservation
                     
                 }
             }
         */
 
-        const data = await Reservation.updateOne({ _id: req.params.id }, req.body, { runValidators: true })
+		const data = await Reservation.updateOne({ _id: req.params.id }, req.body, {
+			runValidators: true,
+		});
 
-        res.status(202).send({
-            error: false,
-            data,
-            new: await Reservation.findOne({ _id: req.params.id })
-        })
+		res.status(202).send({
+			error: false,
+			data,
+			new: await Reservation.findOne({ _id: req.params.id }),
+		});
+	},
 
-    },
-
-    delete: async (req, res) => {
-        /*
+	delete: async (req, res) => {
+		/*
             #swagger.tags = ["Reservations"]
             #swagger.summary = "Delete Reservation"
         */
 
-        const data = await Reservation.deleteOne({ _id: req.params.id })
+		const data = await Reservation.deleteOne({ _id: req.params.id });
 
-        res.status(data.deletedCount ? 204 : 404).send({
-            error: !data.deletedCount,
-            data
-        })
+		res.status(data.deletedCount ? 204 : 404).send({
+			error: !data.deletedCount,
+			data,
+		});
+	},
+    passengers: async (req, res) => {
+		/*
+            #swagger.tags = ["Reservations"]
+            #swagger.summary = "List Passengers of  Reservation"
+        */
 
-    },
-}
+		const data = await Reservation.findOne({ _id: req.params.id });
+        const passengers=await Passenger.find({_id: { $in: data.passengers } })
+		res.status(200).send({
+			error: false,
+			passengers,
+		});
+	},
+};
