# flightAPI/src/routes/reservation.js
@@ -18,6 +18,6 @@ router.route('/:id')
     .put( reservation.update)
     .patch( reservation.update)
     .delete(permissions.isAdmin, reservation.delete)
-
+router.get('/:id/passengers',reservation.passengers)
 /* ------------------------------------------------------- */
 module.exports = router
